--- a/contact/index.html
+++ b/contact/index.html
@@ -612,11 +612,11 @@
                 </div>
             </a>
             <ul class="nav-menu" id="nav-menu">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="officers.html" class="nav-link">Officers</a></li>
-                <li><a href="events.html" class="nav-link">Events</a></li>
-                <li><a href="achievements.html" class="nav-link">Achievements</a></li>
-                <li><a href="contact.html" class="nav-link active">Contact Us</a></li>
+                <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="/officers" class="nav-link">Officers</a></li>
+                <li><a href="/events" class="nav-link">Events</a></li>
+                <li><a href="/achievements" class="nav-link">Achievements</a></li>
+                <li><a href="/contact" class="nav-link">Contact Us</a></li>
             </ul>
             <div class="mobile-menu-toggle" id="mobile-menu-toggle">
                 <div class="hamburger-line"></div>
