--- a/contact/index.html
+++ b/contact/index.html
@@ -612,7 +612,7 @@
                 </div>
             </a>
             <ul class="nav-menu" id="nav-menu">
-                <li><a href="/home/" class="nav-link">Home</a></li>
+                <li><a href="/home" class="nav-link">Home</a></li>
                 <li><a href="/officers" class="nav-link">Officers</a></li>
                 <li><a href="/events" class="nav-link">Events</a></li>
                 <li><a href="/achievements" class="nav-link">Achievements</a></li>
