updated home href

--- a/home/index.html
+++ b/home/index.html
@@ -480,7 +480,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <a href="#home" class="logo">
+            <a href="/home" class="logo">
                 <div class="logo-container">
                     <img src="assets/logo.png" alt="AK Make-A-Wish Logo" class="logo-img default" id="logo-default">
                     <img src="assets/logo_scroll.png" alt="AK Make-A-Wish Logo Scrolled" class="logo-img scrolled" id="logo-scrolled">
