--- a/officers/index.html
+++ b/officers/index.html
@@ -490,7 +490,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">
+            <a href="/home" class="logo">
                 <div class="logo-container">
                     <img src="assets/logo.png" alt="AK Make-A-Wish Logo" class="logo-img default" id="logo-default">
                     <img src="assets/logo_scroll.png" alt="AK Make-A-Wish Logo Scrolled" class="logo-img scrolled" id="logo-scrolled">
