updated home href

--- a/home/index.html
+++ b/home/index.html
@@ -482,8 +482,8 @@
         <div class="nav-container">
             <a href="/home" class="logo">
                 <div class="logo-container">
-                    <img src="assets/logo.png" alt="AK Make-A-Wish Logo" class="logo-img default" id="logo-default">
-                    <img src="assets/logo_scroll.png" alt="AK Make-A-Wish Logo Scrolled" class="logo-img scrolled" id="logo-scrolled">
+                    <img src="https://ak-maw.vercel.app/assets/logo.png" alt="AK Make-A-Wish Logo" class="logo-img default" id="logo-default">
+                    <img src="https://ak-maw.vercel.app/assets/logo_scroll.png" alt="AK Make-A-Wish Logo Scrolled" class="logo-img scrolled" id="logo-scrolled">
                 </div>
             </a>
             <ul class="nav-menu" id="nav-menu">
